@@ -25,7 +25,6 @@
 package co.elastic.apm.agent.bci;
 
 import co.elastic.apm.agent.MockTracer;
-import co.elastic.apm.agent.bci.subpackage.AdviceInSubpackageInstrumentation;
 import co.elastic.apm.agent.configuration.CoreConfiguration;
 import co.elastic.apm.agent.impl.ElasticApmTracer;
 import co.elastic.apm.agent.impl.transaction.AbstractSpan;
@@ -426,12 +425,6 @@ class InstrumentationTest {
     @Test
     void testInlinedIndyAdvice() {
         assertThatThrownBy(() -> ElasticApmAgent.validateAdvice(InlinedIndyAdviceInstrumentation.class))
-            .isInstanceOf(IllegalStateException.class);
-    }
-
-    @Test
-    void testAdviceInSubpackage() {
-        assertThatThrownBy(() -> ElasticApmAgent.validateAdvice(AdviceInSubpackageInstrumentation.class))
             .isInstanceOf(IllegalStateException.class);
     }
 
