@@ -1,1 +1,1 @@
-co.elastic.apm.plugin.PluginInstrumentation
+co.elastic.apm.agent.plugin.PluginInstrumentation
